threshold: fix sometimes alphabet cant show on safari

--- a/css/showAlphabet.css
+++ b/css/showAlphabet.css
@@ -1,5 +1,7 @@
 #alphabet-holder {
   position: fixed;
+  margin: 0;
+  padding: 0;
   z-index: 9999999;
   font-size: 3rem;
   max-width: 100%;
